add jekyll-last-modified-at Gem and "Modified" labels

--- a/_config.yml
+++ b/_config.yml
@@ -17,3 +17,6 @@ aux_links:
     - "https://github.com/xiaoxiae/Robotics-Simplified-Website"
 
 color_scheme: nil
+
+gems:
+  - jekyll-last-modified-at
