add tex output files to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -11,5 +11,35 @@ assets/images
 node_modules
 .bundle
 
+# TeX output files
+*.acn
+*.acr
+*.alg
+*.aux
+*.bbl
+*.blg
+*.dvi
+*.fdb_latexmk
+*.fls
+*.glg
+*.glo
+*.gls
+*.idx
+*.ilg
+*.ind
+*.ist
+*.lof
+*.log
+*.lot
+*.maf
+*.mtc
+*.mtc1
+*.out
+*.synctex.gz
+*.toc
+*.bcf
+*.run.xml
+_minted-*
+
 # Compiled Python
 __pycache__
