--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Robotics Simplified
 description: Intuitive explanations of robotics concepts.
-baseurl: "/"
-url: "https://xiaoxiae.github.io/Robotics-Simplified-Website"
+baseurl: "Robotics-Simplified-Website/"
+url: "https://xiaoxiae.github.io/"
 
 permalink: pretty
 exclude: ["node_modules/", "*.gemspec", "*.gem", "Gemfile", "Gemfile.lock", "package.json", "script/", "LICENSE.txt", "lib/", "bin/", "README.md", "Rakefile"]
