try to fix URL again

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Robotics Simplified
 description: Intuitive explanations of robotics concepts.
-baseurl: "Robotics-Simplified-Website/"
+baseurl: "/"
 url: "https://xiaoxiae.github.io/"
 
 permalink: pretty
